k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: municipal-app
  namespace: municipal

spec:
  replicas: 2

  selector:
    matchLabels:
      app: municipal-app

  template:
    metadata:
      labels:
        app: municipal-app

    spec:
      containers:
      - name: municipal-app

        image: 051826716700.dkr.ecr.ap-south-1.amazonaws.com/complain

        imagePullPolicy: Always

        ports:
        - containerPort: 5000
